--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hello coursera</title>
+</head>
+<body>
+<h1>coursera test</h1>>
+</body>
+</html>
