--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Hello courseraaaaaaaaaaaaaaaaaaaaaaaa</title>
 </head>
 <body>
-<h1>courseraaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa test</h1>>
+<h1>courseraaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa test</h1>
 </body>
 </html>
